# xls-template

./: .gitignore  arguments.py  common.py  loader.py  log.py  main.py  pyproject.toml  reader.py  result_saver.py  settings.py  settings_example.txt  uploader.py  worker.py
python_docx_replace/: __init__.py  block_handler.py  key_changer.py
